# fusion

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dockerfile  setup_macos.bash
.github/workflows/: action.yaml  build.yaml  entrypoint.sh
cmake/: antlr_generate.cmake  get_antlr.cmake  get_mlir.cmake  symlink_to_bin.cmake
grammar/: Fusion.g4
include/: compiler.h  errors.h
include/ast/: ast.h  ast_builder.h  builder.h
include/ast/passes/: builtin.h  control_flow.h  def_ref.h  define.h  pass.h  reference.h  type_check.h
include/ast/symbol/: function_symbol.h  scope.h  symbol.h  symbol_table.h
include/backend/: backend.h  context.h  io.h  utils.h  visitor.h
include/backend/builtin/: builtin.h  print.h
include/backend/expressions/: arithmetic.h  flow.h  global.h
include/backend/types/: boolean.h  character.h  integer.h
include/errors/: errors.h  syntax.h
include/shared/: context.h  type.h
include/shared/type/: boolean.h  character.h  float.h  integer.h  type.h
runtime/: CMakeLists.txt
runtime/src/: CMakeLists.txt  io.c  placeholder.c
scipts/: setup_macos.bash
scripts/: entrypoint.sh  setup_macos.bash
src/: CMakeLists.txt  compiler.cpp  main.cpp
src/ast/: ast.cpp  ast_builder.cpp  builder.cpp
src/ast/passes/: builtin.cpp  control_flow.cpp  def_ref.cpp  define.cpp  pass.cpp  reference.cpp  type_check.cpp
src/ast/symbol/: function_symbol.cpp  scope.cpp  symbol.cpp  symbol_table.cpp
src/backend/: backend.cpp  context.cpp  io.cpp  utils.cpp  visitor.cpp
src/backend/builtin/: builtin.cpp  print.cpp
src/backend/expressions/: arithmetic.cpp  flow.cpp  global.cpp
src/backend/types/: boolean.cpp  character.cpp  integer.cpp
src/errors/: syntax.cpp
src/shared/: context.cpp  type.cpp
src/shared/type/: boolean.cpp  character.cpp  float.cpp  integer.cpp  type.cpp
tests/: ci_config.json  fuse.ll  tester_config.json
tests/input/assign/: valid.in
tests/input/builtin/: character.in  integer.in
tests/input/conditionals/: basic.in  else.in  else_if.in  if.in
tests/input/declaration/: basic.in
tests/input/errors/assign/: const.in
tests/input/errors/symbol/: assn_func.in  call_var.in  double_param.in  loop.in  scope.in  undefined_func.in  undefined_var.in
tests/input/errors/syntax/: break.in  continue.in  int_overflow.in  return.in
tests/input/errors/type/: arg_param.in  assignment.in  else_if.in  if.in  int_sizes.in  loop.in  return.in  unary_minus.in
tests/input/errors/type_error/: arg_param_count.in  binary_mismatch.in  declaration.in  unary_negate.out
tests/input/function/: basic.in  character.in  integer.in  multi_arg.in  return.in
tests/input/globals/: basic.in  function.in  function_return.in  multiple.in
tests/input/loop/: basic.in  flow.in
tests/input/operators/: bool.in  char.in  i32.in  unary.in
tests/input/statements/: nested_scope.in  scope.in
tests/output/declaration/: basic.out
tests/output/errors/assign/: const.out
tests/output/errors/symbol/: assn_func.out  double_param.out  loop.out  scope.out  undefined_var.out
tests/output/errors/syntax/: break.out  return.out
tests/output/errors/type/: else_if.out
tests/output/errors/type_error/: arg_param.out  unary_negate.out
tests/output/operators/: bool.out  i32.out  unary.out
